[package]
edition = "2021"
name = "spatula"
version = "0.0.1"

authors = ["Orvar <orvarsegerstrom@gmail.com>"]
categories = ["parser-implementations"]
description = "Parser and interpreter for the Chef language"
homepage = "https://github.com/0rvar/spatula"
keywords = ["chef", "interpreter", "parser"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
chumsky = "1.0.0-alpha.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = "1.0.210"
serde_derive = "1.0.210"
test_each_file = "0.3.3"
toml = "0.8.19"
